--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
   </head>
   
   <body>
-    <header class="primary-background">
-      <div class="logo">
-        <img src="assets/images/logo.png" alt="Twitter icon">
-      </div>
-      
-      <div class="text secondary-text">
-        Copycat Bootstrap
-      </div>
-
-      <nav>
-        <a href="/logout" class="btn primary-text secondary-background">Logout</a>
-      </nav>
+    <header class="container-fluid primary-background">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="logo">
+            <img src="assets/images/logo.png" alt="Twitter icon">
+          </div>
+          
+          <div class="text secondary-text hidden-xs hidden-sm">
+            Copycat Bootstrap
+          </div>
+          <nav>
+            <a href="/logout" class="btn primary-text secondary-background">Logout</a>
+          </nav>
+        </div>
+      </div> 
     </header>
 
     <main>
@@ -136,16 +139,20 @@
       </div>
     </main>
 
-    <footer class="primary-background">
-      <img src="assets/images/logo.png" alt="Twitter logo">
-      <nav>
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Company</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Help</a></li>
-        </ul>
-      </nav>
+    <footer class="container-fluid primary-background">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <img src="assets/images/logo.png" alt="Twitter logo">
+          <nav>
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Company</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Help</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </footer>
   </body>
 
